<resources>
    <string name="app_name">Simple Lyrics App</string>
    <string name="title_track">Tracks</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="no_data">Empty Data</string>
    <string name="something_wrong">Ooops… something went wrong</string>
    <string name="title_favorites">Favorites</string>
    <string name="track_rating">Rating: %d</string>
    <string name="no_lyric">No lyrics found..</string>
    <string name="deleted">Deleted From Favorites</string>
    <string name="added">Added to Favorites</string>
    <string name="music">Music</string>
    <string name="album_name">Album Name</string>
    <string name="track_name">Track Name</string>
    <string name="track_artist">Track Artist</string>
    <string name="rating">Rating</string>
    <string name="track_genre">Genre: %s</string>
    <string name="genre">Genre</string>
    <string name="loading">Loading..</string>
    <string name="share">Share</string>
</resources>