<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_music"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/music"
                android:src="@drawable/ic_music"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_album_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/album_name"
                android:textColor="#006064"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_music"
                app:layout_constraintTop_toTopOf="@+id/iv_music" />

            <TextView
                android:id="@+id/tv_track_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/track_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_album_name"
                app:layout_constraintStart_toStartOf="@+id/tv_album_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_album_name" />

            <TextView
                android:id="@+id/tv_track_artist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/track_artist"
                android:textColor="#006064"
                app:layout_constraintEnd_toEndOf="@+id/tv_track_name"
                app:layout_constraintStart_toStartOf="@+id/tv_track_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_track_name" />

            <ImageView
                android:id="@+id/iv_rating"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_star"
                app:layout_constraintStart_toStartOf="@+id/iv_music"
                app:layout_constraintTop_toBottomOf="@+id/iv_music"
                android:contentDescription="@string/rating" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/track_rating"
                android:textColor="#006064"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_rating"
                app:layout_constraintEnd_toEndOf="@+id/iv_music"
                app:layout_constraintStart_toEndOf="@+id/iv_rating"
                app:layout_constraintTop_toTopOf="@+id/iv_rating" />

            <ImageView
                android:id="@+id/iv_genre"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_genre"
                app:layout_constraintStart_toStartOf="@+id/iv_rating"
                app:layout_constraintTop_toBottomOf="@+id/iv_rating"
                android:contentDescription="@string/genre" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/track_genre"
                android:textColor="#006064"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_genre"
                app:layout_constraintEnd_toEndOf="@+id/iv_music"
                app:layout_constraintStart_toEndOf="@+id/iv_genre"
                app:layout_constraintTop_toTopOf="@+id/iv_genre" />

            <TextView
                android:id="@+id/tv_lyric"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="64dp"
                android:text="@string/loading"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/title_favorites"
        android:src="@drawable/ic_favorite_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="@+id/fab_favorite"
        app:layout_constraintEnd_toStartOf="@+id/fab_favorite"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>

